--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-router-dom": "6.24.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "@tanstack/react-query": "5.51.1",
+    "viem": "^2.43.3",
+    "wagmi": "^3.1.3",
+    "js-confetti": "0.13.1",
     "date-fns": "3.6.0",
     "file-saver": "2.0.5",
     "zustand": "4.5.2",
-    "js-confetti": "0.13.1",
-    "viem": "2.43.1",
-    "wagmi": "2.12.0"
+    "@google/genai": "0.21.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
